@@ -1,3 +1,6 @@
+Changes from 0.2p2 to 0.2p3:
+	- upgraded ltraf
+
 Changes from 0.2p1 to 0.2p2:
 	- modified the 'reflash' script
 
